--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://nngrz.github.io/business-card",
   "name": "react-boilerplate",
   "version": "1.0.0",
   "main": "index.js",
